fixing up the ui

--- a/index.html
+++ b/index.html
@@ -8,5 +8,15 @@
 </head>
 <body>
     <script src="script.js"></script>
+    <h1>Jack N Poy!</h1>
+    <div>
+        Score: 
+        <br>
+        Round:
+        <br>
+    </div>
+    <button class="rock">Rock</button>
+    <button class="paper">Paper</button>
+    <button class="scissors">Scissors</button>
 </body>
 </html>
