progress with card selection

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
         </div>
 
         <div class="scoreholder">
-            <div class="scorecard">Score: </div>
+            <div class="scorecard">Score: 0 </div>
 
-            <div class="roundnum">Round: </div>
+            <div class="roundnum">Round: 0 </div>
         </div>
         <div class="gamemsg">
-            <div class="vs-message">Something vs Something</div>
-            <div class="who-won">X wins over Y</div>
+            <div class="vs-message"><h3>Press buttons to play</h3></div>
+            <div class="who-won">First to five wins!</div>
         </div>
 
         <div class="cardholder">
@@ -32,6 +32,7 @@
             <div class="card" id="scissors">Scissors</div>
         </div>
     </div>
+    <footer>Trivia: Jack en Poy is what "rock paper scissors" is coloquially known in the Philippines. Can you guess where the term came from?</footer>
     <script src="script.js"></script>
 
 </body>
