working javascript code

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         </div>
 
         <div class="scoreholder">
-            <div class="scorecard">Score: 0 </div>
+            <div class="playerscore">Your score: 0 </div>
 
-            <div class="roundnum">Round: 0 </div>
+            <div class="computerscore">Computer score: 0 </div>
         </div>
         <div class="gamemsg">
             <div class="vs-message"><h3>Press buttons to play</h3></div>
@@ -27,9 +27,9 @@
         </div>
 
         <div class="cardholder">
-            <div class="card" id="rock">Rock</div>
-            <div class="card" id="paper">Paper</div>
-            <div class="card" id="scissors">Scissors</div>
+            <button class="card" id="rock">Rock</button>
+            <button class="card" id="paper">Paper</button>
+            <button class="card" id="scissors">Scissors</button>
         </div>
     </div>
     <footer>Trivia: Jack en Poy is what "rock paper scissors" is coloquially known in the Philippines. Can you guess where the term came from?</footer>
