second phase polish

--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
             <div class="computerscore">Computer score: 0 </div>
         </div>
         <div class="gamemsg">
-            <div class="vs-message"><h3>Press buttons to play</h3></div>
+            <div class="vs-message"><h4>Press buttons to play</h4></div>
             <div class="who-won">First to five wins!</div>
         </div>
 
         <div class="cardholder">
-            <button class="card" id="rock">Rock</button>
-            <button class="card" id="paper">Paper</button>
-            <button class="card" id="scissors">Scissors</button>
+            <button class="card" id="rock"><img src="rock.png"></button>
+            <button class="card" id="paper"><img src="paper.png"></button>
+            <button class="card" id="scissors"><img src="scissors.png"></button>
         </div>
     </div>
     <footer>Trivia: Jack en Poy is what "rock paper scissors" is coloquially known in the Philippines. Can you guess where the term came from?</footer>
