--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="gamecontainer">
         <div class="titlecard">
-            <h1>Jack N Poy!</h1>
+            <h2>Jack N Poy!</h2>
         </div>
 
         <div class="scoreholder">
@@ -22,7 +22,7 @@
             <div class="computerscore">Computer score: 0 </div>
         </div>
         <div class="gamemsg">
-            <div class="vs-message"><h4>Press buttons to play</h4></div>
+            <div class="vs-message"><b>Press buttons to play</b></div>
             <div class="who-won">First to five wins!</div>
         </div>
 
